# xormove

./: .gitignore  .repokit.json  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  vcpkg.json  xormove.sln  xormove.vcxproj  xormove.vcxproj.filters
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: main.yml
docs/: BUILDING.md
include/: version.h
scripts/: build-unix.sh  build-windows.cmd  install-hooks.sh  update-version.sh
scripts/hooks/: post-commit  pre-commit  pre-commit-basic  pre-push
src/: xormove.cpp
tests/: test_path_preservation.cpp  test_xor_swap.cpp
tests/data/: fileA.txt  fileB.txt
tests/one-offs/: test_path_preservation_v0.3.1.sh
